modules/aws/network/vpc/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block            = "${var.cidr_block}"
  enable_dns_hostnames  = true
  enable_dns_support    = true

  tags {
      Name = "safimed-vpc"
  }

  lifecycle {
    prevent_destroy = false
  }
}
